<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MemuActivity"
    android:background="@color/main_bg_color"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGuaHao"
            style="@style/textViesStyle"
            android:background="@drawable/txt_comfirm_black_bg"
            android:text="文件上傳" />

        <Button
            android:id="@+id/btnTj"
            style="@style/textViesStyle"
            android:background="@drawable/txt_comfirm_bg4"
            android:text="@string/title_setting_tj" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSettingParam"
            style="@style/textViesStyle"
            android:background="@drawable/txt_comfirm_dark_res_bg"
            android:text="@string/title_activity_setting" />

        <Button
            android:id="@+id/btnSettingNotice"
            style="@style/textViesStyle"
            android:background="@drawable/txt_comfirm_bg"
            android:text="@string/title_setting_notice" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/nur_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnVideo"
            style="@style/textViesStyle"
            android:background="@drawable/txt_comfirm_bg4"
            android:text="@string/title_setting_video" />

        <Button
            android:id="@+id/btnSettingSwitch"
            style="@style/textViesStyle"
            android:background="@drawable/txt_comfirm_he_bg"
            android:text="@string/title_setting_switch" />
    </LinearLayout>
</LinearLayout>