<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_bg_color"
    tools:context=".AddHostActivity">

    <TextView
        android:id="@+id/imgDoctor"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="@string/add_mac"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/login_linner_bg"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/ipAddrNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/ipAddrNo"
            android:textColor="@android:color/black"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/editIpNo"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/black"
            android:background="@drawable/edittext_input_bg"
            android:hint="@string/ipAddrNo"
            android:inputType="text" />

        <TextView
            android:id="@+id/ipAddr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/ipAddr"
            android:textColor="@android:color/black"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/editIp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/black"
            android:background="@drawable/edittext_input_bg"
            android:hint="@string/ipAddr"
            android:inputType="text" />



        <TextView
            android:id="@+id/ipAddrMachine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/ipmachine"
            android:textColor="@android:color/black"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/editMachine"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/black"
            android:background="@drawable/edittext_input_bg"
            android:hint="@string/ipmachine"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_nomal_bg"
                android:text="@string/linkcancle"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_login_bg"
                android:text="添加"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>